#64 - Fix connections and invitations api
